# artha-ai-trading-simulator

./: .gitignore  CMakeLists.txt  README.md  artha_ai
backend/: main.cpp
frontend/: index.html
